@@ -51,11 +51,13 @@ exit 1" > openjade
 cp openjade doxygen
 # gawk it's used by txt2man
 cp openjade gawk
-chmod +x openjade doxygen gawk
+cp openjade autoheader
+chmod +x openjade doxygen gawk autoheader
 cd ..
 if ! openjade --help; then true; else echo 'succedeed ?'; false; fi
 if ! doxygen --help; then true; else echo 'succeeded ?'; false; fi
 if ! gawk --help; then true; else echo 'succeeded ?'; false; fi
+if ! autoheader --help; then true; else echo 'succeeded ?'; false; fi
 echo "fakebin ok" >> "$LOG"
 
 # direct make install (without make all)
