@@ -1,8 +1,9 @@
-$Id: NEWS,v 1.9 2004-12-05 20:05:05 freddy77 Exp $
+$Id: NEWS,v 1.10 2004-12-08 20:30:03 freddy77 Exp $
 * 0.64
 - reduce network bandwidth use on Linux and *BSD
 - do not free TDSSOCKET in tds_connect
 - moved network stuff in net.c
+- fixed conversion NUMERIC->NUMERIC changing precision/scale
 
 libTDS API changes
 - tds_connect do not free TDSSOCKET* on failure
